Session 3 data commit from 04

--- a/04_quarto.qmd
+++ b/04_quarto.qmd
@@ -1,7 +1,7 @@
 ---
 title: 'Wastewater-based surveillance report'
 subtitle: "Respiratory viruses"
-author: "Author:Team X"
+author: "Team 8"
 format:  
   html: 
     toc: true
@@ -19,6 +19,8 @@ execute:
   warning: false
 # bibliography: bibli.bib
 # csl: style.csl
+
+
 ---
 
 ```{r}
@@ -38,17 +40,25 @@ Latest results dating of `r format(date_reporting, "%G-W%V")` (`r format(date_re
 ## National level
 
 Viral concentration of two wastewater treatment plants:
-Volgt
+Volgt de graphic representation of the SARS CoV-2 data for week 37 at national level including data for two treatment plants which are Oostende and Aalst.
 
 ![](./plot/graph_oostende_aalst.png)
 
 ## Individual area level
 
 Table of two wastewater treatment plants :
-
+This graph is a visual of the SARS CoV-2 data for week 37 at national level and includes data for two treatment plants which are Oostende and Aalst Wastewater Treatment Works.  
 ![](./tbl_nation.csv)
 
+Number 1 
+- mariette
 
+Number 2
+Carrie - data visuals
+
+
+Number 3
+Mieke
 
 ```{r}
 # tbl_nation
